--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
      <header class="header" id="header">
       <nav class="nav">
         <div class="nav__content container">
-          <a href="#" class="nav__logo"><span> Rafael</span></a>
+          <a href="#" class="nav__logo"><span> Planeta Impact </span></a>
           <ul class="nav__links">
             <li class="nav__link"><a href="#header">Pagina inicial</a></li>
-            <li class="nav__link"><a href="#services">Serviços</a></li>
+            <li class="nav__link"><a href="#services">Sobre mim</a></li>
             <li class="nav__link"><a href="#about">Sobre mim</a></li>
             <li class="nav__link"><a href="#proyects">Projetos</a></li>
             <li class="nav__link"><a href="#contact">Contato</a></li>
