--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
      <header class="header" id="header">
       <nav class="nav">
         <div class="nav__content container">
-          <a href="#" class="nav__logo"><span> Planeta Impact </span></a>
+          <a href="#" class="nav__logo"><span> Jade</span></a>
           <ul class="nav__links">
             <li class="nav__link"><a href="#header">Pagina inicial</a></li>
-            <li class="nav__link"><a href="#services">Sobre mim</a></li>
-            <li class="nav__link"><a href="#about">Redes Sociais</a></li>
-            <li class="nav__link"><a href="#proyects">Conteúdo</a></li>
-            <li class="nav__link"><a href="#contact">Jogue comigo</a></li>
+            <li class="nav__link"><a href="#services">Serviços</a></li>
+            <li class="nav__link"><a href="#about">Sobre mim</a></li>
+            <li class="nav__link"><a href="#proyects">Projetos</a></li>
+            <li class="nav__link"><a href="#contact">Contato</a></li>
           </ul>
          
           <div class="nav__icon-menu"><i class="fa-solid fa-bars"></i></div>
