--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 
   ::-webkit-scrollbar-track 
   {
-      background: #00fff2;
+      background: #001aff;
   }
 
   ::-webkit-scrollbar-thumb 
@@ -58,9 +58,9 @@
 
       <section class="hero" id="hero">
         <div class="hero__content container">
-          <h3>Olá, sejam bem vindos a @rasinformatica</h3>
-          <h1 class="hero__title"> <span> Professor Programador</span></h1>
-          <p>Trabalho com atualização de drives, Software, formatação, modificação de bios de notebook e pc.</p>
+          <h3>Olá, sejam bem vindos ao meu porfolio</h3>
+          <h1 class="hero__title"> <span> Estudante com o sonho de ser advogada</span></h1>
+          <p>Tenho um canal onde posto videos sobre Genshin Impact... @PlanetaImpact.</p>
           <a href="#proyects" class="hero__btn btn">Portfolio</a>
 
           <div class="social-media social-media--hero">
