--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ z<!DOCTYPE html>
         <div class="hero__content container">
           <h3>Olá, sejam bem vindos ao meu porfolio</h3>
           <h1 class="hero__title"> <span> Estudante com o sonho de ser advogada</span></h1>
-          <p>Tenho um canal onde posto videos sobre Genshin Impact... @PlanetaImpact.</p>
+          <p>Tenho um canal onde posto videos sobre Genshin Impact @PlanetaImpact.</p>
           <a href="#proyects" class="hero__btn btn">Portfolio</a>
 
           <div class="social-media social-media--hero">
